more changes + greens

--- a/src/styles/Productviewpg.scss
+++ b/src/styles/Productviewpg.scss
@@ -65,8 +65,8 @@
 }
 
 .AddTocart {
-  border: 2px solid rgb(245, 109, 19);
-  background-color: rgb(245, 109, 19);
+  border: 2px solid #006149;
+  background-color: #006149;
   color: white;
   outline: 0;
   height: 70px;
